<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Category"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Category"
            android:layout_width="wrap_content"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/date"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>
